Fixed javadoc plugin, moved module-info.java outside of scr/main/jdk9.